# mini-aladdin

./: CMakeLists.txt  PROJECT_SPEC.md  README.md
scripts/: aggregate_results.py  benchmark_all.sh  profile_nsight.sh
src/black_scholes/cpu/include/: bs_cpu_pricer.hpp
src/black_scholes/cpu/src/: bs_cpu_pricer.cpp  main.cpp
src/black_scholes/gpu_naive/: CMakeLists.txt
src/black_scholes/gpu_naive/include/: bs_gpu_naive.cuh
src/black_scholes/gpu_naive/src/: bs_gpu_naive.cu  main.cpp
src/black_scholes/gpu_optimized/: CMakeLists.txt
src/black_scholes/gpu_optimized/include/: bs_gpu_optimized.cuh
src/black_scholes/gpu_optimized/src/: bs_gpu_optimized.cu  main.cpp
src/core/include/: benchmark_runner.hpp  csv_loader.hpp  math_utils.hpp  option.hpp  timer.hpp
src/monte_carlo/cpu/include/: mc_cpu_pricer.hpp
src/monte_carlo/cpu/src/: main.cpp  mc_cpu_pricer.cpp
src/monte_carlo/gpu_naive/: CMakeLists.txt
src/monte_carlo/gpu_naive/include/: mc_gpu_naive.cuh
src/monte_carlo/gpu_naive/src/: main.cpp  mc_gpu_naive.cu
src/monte_carlo/gpu_optimized/: CMakeLists.txt
src/monte_carlo/gpu_optimized/include/: mc_gpu_optimized.cuh
src/monte_carlo/gpu_optimized/src/: main.cpp  mc_gpu_optimized.cu
